--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -26,7 +26,9 @@ padding-top: 5%;
     font-weight: 400;
     font-style: normal;
         color: white; 
-        padding-bottom: 100px;
+        padding-bottom: 75px;
+        padding-top: 30px;
+
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -42,6 +44,7 @@ font-size: 1em;}
 
 @media (max-width: 640px) {
     .credits { 
+        padding-top: 60px;
        font-size: 1.5em;
     }
 }
