--- a/static/styles/catagories/history.css
+++ b/static/styles/catagories/history.css
@@ -57,15 +57,17 @@ html, body {
 
 .text {
   color: white;
-  position: absolute;
-  top: 18em;
-  transform: translateY(0);
+  position: absolute; /* Absolute positioning to be animated */
+  top: 18em; /* You can adjust this as needed */
+  left: 0%; /* Center horizontally */
+  transform: translatey(-50%); /* Adjust for exact centering */
   text-align: center;
-  justify-content: center;
   z-index: 1;
-  overflow: visible;
   width: 100%;
   font-size: 1.5em;
+  opacity: 0;
+  transform: scale(0.5); /* Initial scale set to 0.5 */
+  transition: transform 5s ease-out, opacity 0.5s ease-out;
 }
 
 .story {
