adding password and changing video quality

--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -56,7 +56,7 @@
         </div>
         <div class="grid-item">
             <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/beekeeper_1.mp4') }}" type="video/mp4">
+                <source src="{{ url_for('static', filename='/img/vineyard/beekeeper.mp4') }}" type="video/mp4">
             </video>
             </div>
             <div class="grid-item">
