--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,7 +15,7 @@
     <div class="beth">
         <img src="{{ url_for('static', filename='/img/contact/contact.jpg') }}">
         <div class="contact">
-            <h1>For more information:<a href="mailto:nelsonart@ymail.com"> nelsonart@ymail.com</a>.</h1>
+            <h1>For more information:<a href="mailto:nelsonart@ymail.com"> nelsonart@ymail.com</a></h1>
             <h1><a href="https://bethnelsoncv.blogspot.com/" target="_blank">Curriculum Vitae ↘︎</a></h1>
             <h1><a href="{{ url_for('credits') }}">Credits ↘︎</a></div>  </h1>
           </div>
