--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -105,7 +105,7 @@
 
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source src="{{ url_for('static', filename='/img/history/farmscope.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/history/farmscope.webm') }}" type="video/webm">
         </video>
         </div>
     <div class="grid-item">
