trying to load faster

--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -37,6 +37,7 @@
         </div> 
         <div class="grid-item">
             <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/bees.webm') }}" type="video/webm">
                 <source src="{{ url_for('static', filename='/img/vineyard/bees.mp4') }}" type="video/mp4">
             </video>
         </div>  
@@ -56,17 +57,20 @@
         </div>
         <div class="grid-item">
             <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/beekeeper.webm') }}" type="video/webm">
                 <source src="{{ url_for('static', filename='/img/vineyard/beekeeper.mp4') }}" type="video/mp4">
             </video>
             </div>
             <div class="grid-item">
                 <video autoplay loop muted playsinline>
+                    <source src="{{ url_for('static', filename='/img/vineyard/crane.webm') }}" type="video/webm">
                     <source src="{{ url_for('static', filename='/img/vineyard/crane.mp4') }}" type="video/mp4">
                 </video>
             </div>  
 
         <div class="grid-item">
             <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/tractor3_1.webm') }}" type="video/webm">
                 <source src="{{ url_for('static', filename='/img/vineyard/tractor3_1.mp4') }}" type="video/mp4">
             </video>
         </div>
@@ -75,6 +79,7 @@
         </div>  
         <div class="grid-item">
             <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/harvest.webm') }}" type="video/webm">
                 <source src="{{ url_for('static', filename='/img/vineyard/harvest.mp4') }}" type="video/mp4">
             </video>
         </div> 
@@ -98,6 +103,7 @@
         </div>  
         <div class="grid-item">
             <video autoplay loop muted playsinline>
+                <source src="{{ url_for('static', filename='/img/vineyard/harvest2.webm') }}" type="video/webm">
                 <source src="{{ url_for('static', filename='/img/vineyard/harvest2.mp4') }}" type="video/mp4">
             </video>
         </div>    
@@ -107,6 +113,7 @@
 
             <div class="grid-item">
                 <video autoplay loop muted playsinline>
+                    <source src="{{ url_for('static', filename='/img/vineyard/tractor2_1.webm') }}" type="video/webm">
                     <source src="{{ url_for('static', filename='/img/vineyard/tractor2_1.mp4') }}" type="video/mp4">
                 </video>
             </div>  
