--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -106,6 +106,7 @@
     <div class="grid-item">
         <video autoplay loop muted playsinline>
             <source src="{{ url_for('static', filename='/img/history/farmscope.webm') }}" type="video/webm">
+            <source src="{{ url_for('static', filename='/img/history/farmscope.mp4') }}" type="video/mp4">
         </video>
         </div>
     <div class="grid-item">
@@ -130,6 +131,7 @@
     <!--interior images-->
     <div class="grid-item">
         <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/history/interior/canoehanging.webm') }}" type="video/webm">
             <source src="{{ url_for('static', filename='/img/history/interior/canoehanging.mp4') }}" type="video/mp4">
         </video>
         </div>
@@ -197,6 +199,7 @@
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/history/interior/building3.webm') }}" type="video/webm">
             <source src="{{ url_for('static', filename='/img/history/interior/building3.mp4') }}" type="video/mp4">
         </video>
         </div>
