--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -41,11 +41,13 @@
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source src="{{ url_for('static', filename='/img/preserving/walnutdye.mp4') }}">
+            <source src="{{ url_for('static', filename='/img/preserving/walnutdye.webm') }}" type="video/webm">
+            <source src="{{ url_for('static', filename='/img/preserving/walnutdye.mp4') }}" type="video/mp4">
         </video>
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/sauce.webm') }}" type="video/webm">
             <source src="{{ url_for('static', filename='/img/preserving/sauce.mp4') }}" type="video/mp4">
         </video>
     </div>
@@ -90,6 +92,7 @@
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/cider2.webm') }}" type="video/webm">
             <source src="{{ url_for('static', filename='/img/preserving/cider2.mp4') }}" type="video/mp4">
         </video>
     </div>
@@ -131,6 +134,7 @@
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
+            <source src="{{ url_for('static', filename='/img/preserving/labels4.webm') }}" type="video/webm">
             <source src="{{ url_for('static', filename='/img/preserving/labels4.mp4') }}" type="video/mp4">
         </video>
     </div>
