--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -101,20 +101,15 @@
          <div class="grid-item">
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_8177.jpg') }}">
         </div>  
-        <div class="grid-item">
-            <video autoplay loop muted playsinline>
-                <source src="{{ url_for('static', filename='/img/vineyard/harvest2.webm') }}" type="video/webm">
-                <source src="{{ url_for('static', filename='/img/vineyard/harvest2.mp4') }}" type="video/mp4">
-            </video>
-        </div>    
+       
          <div class="grid-item">
              <img src="{{ url_for('static', filename='/img/vineyard/IMG_8230.jpg') }}">
         </div>
 
             <div class="grid-item">
                 <video autoplay loop muted playsinline>
-                    <source src="{{ url_for('static', filename='/img/vineyard/tractor2_1.webm') }}" type="video/webm">
-                    <source src="{{ url_for('static', filename='/img/vineyard/tractor2_1.mp4') }}" type="video/mp4">
+                 
+                    <source src="{{ url_for('static', filename='/img/vineyard/tractor8.mp4') }}" type="video/mp4">
                 </video>
             </div>  
         <div class="grid-item">
