--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -37,7 +37,7 @@
         <img src="{{ url_for('static', filename='/img/preserving/IMG_0437.jpg') }}">
     </div>
     <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/preserving/p1.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/preservingfood.jpg') }}">
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
@@ -70,11 +70,7 @@
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/03.jpg') }}">
     </div>
-    <div class="grid-item">
-        <video autoplay loop muted playsinline>
-            <source src="{{ url_for('static', filename='/img/preserving/cider.mp4') }}" type="video/mp4">
-        </video>
-    </div>
+ 
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_6997.jpg') }}">
     </div>
