try without loading screen

--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -280,13 +280,15 @@
 
 
 <script>
-    window.addEventListener('load', () => {
-        const loadingScreen = document.getElementById('loading-screen');
-        const mainContent = document.getElementById('main-content');
+    //for loading
+//window.addEventListener('load', () => {
+    // Hide the loading screen
+    //const loadingScreen = document.getElementById('loading-screen');
+    //const mainContent = document.getElementById('main-content');
 
-        loadingScreen.style.display = 'none'; // Hide loading screen
-        mainContent.style.display = 'block';  // Show main content
-    });
+    //loadingScreen.style.display = 'none'; // Hide the loading screen
+   // mainContent.style.display = 'block'; // Show the main content
+//});
 
     window.onload = () => {
         const grid = document.querySelector('.grid');
