--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -9,12 +9,12 @@
     <title>History & Restoration</title>
 </head>
 <body>
-    <div id="loading-screen">
+  <!--  <div id="loading-screen">
         <p id="loading-text">Loading</p>
     </div>
 
  <div id="main-content" style="display:none;">  
-<div>
+<div>-->
 {% include 'navigation.html' %}
 <div class="history-container">
     <div class="pagetitle">History & Restoration</div>
