--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -12,10 +12,10 @@
 
 
 <body>
-    <div id="loading-screen">
+     <!--<div id="loading-screen">
         <p id="loading-text">Loading</p>
     </div>
-    <div id="main-content" style="display:none;"> 
+    <div id="main-content" style="display:none;"> --> 
     {% include 'navigation.html' %}
 
     <div class="hero-container">
