--- a/static/styles/catagories/preserving.css
+++ b/static/styles/catagories/preserving.css
@@ -8,6 +8,7 @@
 .hero {
     width: 100vw;
     height: 100vh;
+    aspect-ratio: 4 / 3;
     object-fit: cover;
     z-index: -1;
     padding-bottom: 10px;
